# tsunami-udp

./: COMPILING.txt  Makefile.am  Makefile.in  USAGE.txt  configure  configure.in  recompile.sh
client/: Makefile.am  Makefile.in  command.c
common/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  tsunami-cvs-buildnr.h  tsunami-server.h
rtclient/: Makefile.am  Makefile.in
rtserver/: Makefile.am  Makefile.in
server/: Makefile.am  Makefile.in  config.c  main.c  protocol.c
util/: Makefile.am  Makefile.in
